<resources>
    <string name="app_name">Js Movie DB App</string>
    <!--Items by Category-->
    <string name="playing_now">Reproducir ahora</string>
    <string name="movies">Películas</string>
    <string name="series">Series</string>
    <string name="most_popular">Más populares</string>
    <string name="wellcome_title">Bienvenido.</string>
    <string name="wellcome_subtitle"> Miles de películas y programas de televisión por descubrir.</string>
    <string name="wellcome_post_data">  Explora ahora.</string>
    <string name="popularity_init">0</string>
    <string name="no_internet_connection">Estás offline! Algunos contenidos no estarán disponibles.</string>
    <string name="lorem_ipsum_m">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially d more rMaker including versions of Lorem Ipsum.</string>
    <!--    Itme Detail-->
    <string name="user_rating">Puntuación de usuario.</string>
    <string name="show_trailer">Ver avance.</string>
    <string name="no_video_message">No hay videos disponibles.</string>
    <string name="unavailable_on_offline_mode">Este contenido no está disponible en modo offline!.</string>
</resources>