<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.features.ItemsByCategoryFragment"
    android:background="@color/transparent_light"
    >

    <LinearLayout
        android:id="@+id/banner_containner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@drawable/header_background"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/basic_horizontal_margin"

        >

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/transparent"
            android:fontFamily="@font/lato_bold"
            android:paddingTop="36dp"
            android:text="@string/wellcome_title"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/transparent"
            android:fontFamily="@font/lato_bold"
            android:paddingVertical="5dp"
            android:text="@string/wellcome_subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/middle_text" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/transparent"
            android:fontFamily="@font/lato_bold"
            android:paddingVertical="5dp"
            android:text="@string/wellcome_post_data"
            android:textColor="@color/white"
            android:textSize="@dimen/litle_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_containner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner_containner"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
        android:layout_marginVertical="@dimen/basic_vertical_margin"
        android:background="@drawable/filters_bar_background"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_button_selected"
            android:fontFamily="@font/lato_light"
            android:padding="5dp"
            android:text="@string/playing_now"
            android:textColor="@color/green_text"
            android:textSize="@dimen/middle_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_button_no_selected"
            android:fontFamily="@font/lato_light"
            android:padding="5dp"
            android:text="@string/most_popular"
            android:textColor="@color/black"
            android:textSize="@dimen/middle_text"

            />

    </LinearLayout>
    <ScrollView
        android:layout_below="@+id/buttons_containner"
        android:background="@color/transparent_dark"
        android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
        android:layout_marginBottom="@dimen/basic_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>


</RelativeLayout>