<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data >
        <variable
            name="item"
            type="com.js.apps.moviedbapp.view.core.CardItem" />
        <variable
            name="type"
            type="com.js.apps.moviedbapp.model.core.MediaTypes" />
        <variable
            name="presenter"
            type="com.js.apps.moviedbapp.view.features.ItemDetailFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.features.ItemDetailFragment"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/iv_detail_poster"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/selected_button"
            android:scaleType="fitCenter"

            />

        <LinearLayout
            android:id="@+id/video_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:visibility="gone" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_detail_poster"
        android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
        android:layout_marginVertical="@dimen/basic_vertical_margin"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@{item.name}"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text_extra"
        tools:text="@string/wellcome_title" />
    <LinearLayout
        android:id="@+id/detail_title_footer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_detail_title"
        >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_rating_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_title_footer_container"
        android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
        android:layout_marginVertical="@dimen/basic_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_circle"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@{item.rating}"
            android:textColor="@color/green_text"
            android:textSize="@dimen/middle_text" />

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
            android:fontFamily="@font/lato_bold"
            android:gravity="center_vertical"
            android:text="@string/user_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/middle_text" />

        <ImageView
            android:id="@+id/iv_play_trailler"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:background="@drawable/icon_play_solid"
            android:onClick="@{() -> presenter.showVideoTapped(item,type)}"
            />

        <TextView
            android:id="@+id/tv_trailer_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
            android:fontFamily="@font/lato_bold"
            android:gravity="center_vertical"
            android:text="@string/show_trailer"
            android:textColor="@color/white"
            android:textSize="@dimen/middle_text"
            android:onClick="@{() -> presenter.showVideoTapped(item,type)}"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/detail_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_rating_container"
        android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
        android:layout_marginVertical="@dimen/basic_vertical_margin"
        android:background="@color/transparent"
        android:fontFamily="@font/lato_regular"
        android:text="@{item.introText}"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text"
        tools:text="@string/wellcome_subtitle" />

    <TextView
        android:id="@+id/tv_detail_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_intro_text"
        android:layout_marginHorizontal="@dimen/basic_horizontal_margin"
        android:layout_marginVertical="@dimen/basic_vertical_margin"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/principal_gray"
        android:textSize="@dimen/middle_text"
        tools:text="@string/wellcome_post_data"
        android:background="@color/transparent"
        android:text ="@{item.author}"
        />




</RelativeLayout>
    </ScrollView>
</layout>